feat(accessory): resolve peer review issues, check owner approved status, remove mock fallbacks, clean imports